--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "request": "^2.75.0",
-    "xml2json": "^0.10.0"
+    "underscore": "^1.8.3",
+    "validate": "^3.0.1",
+    "xml2js": "^0.4.17"
   }
 }
